Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/ExplicitlyFinalEnum1.out
ExplicitlyFinalEnum1.java:9:7: compiler.err.mod.not.allowed.here: final
1 error
