Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/ExplicitlyFinalEnum1.java
/*
 * @test /nodynamiccopyright/
 * @bug 5009601
 * @summary enum's cannot be explicitly declared final even if they are
 * @author Joseph D. Darcy
 * @compile/fail/ref=ExplicitlyFinalEnum1.out -XDrawDiagnostics ExplicitlyFinalEnum1.java
 */

final enum ExplicitlyFinalEnum1 {
    FE,
    FI,
    FO,
    FUM;
}
